@@ -1,6 +1,6 @@
 caught logic error as expected
-old dict: 1
-old dict: 1
+old dict: 2
+swapped array: /Array
 new dict: 2
 swapped array: /Array
 array and dictionary contents are correct
